# cargo_tai

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/setup/: action.yml
.github/workflows/: rust.yml
cargo-tai/: Cargo.toml
cargo-tai/src/: cli.rs  main.rs
cargo-tai/src/cli/: android.rs  binary.rs  build.rs  compiler.rs  ios.rs  mod.rs
cargo-tai/src/opts/: android.rs  binary.rs  build.rs  cli.rs  compiler.rs  ios.rs  library.rs  mod.rs  resource.rs
docs/: README.md
examples/test-native-tests/: Cargo.toml
examples/test-native-tests/src/: lib.rs
examples/test-project/: Cargo.toml
examples/test-project-nested/: Cargo.toml  test.json
examples/test-project-nested/src/: lib.rs
examples/test-project/benches/: criterion.rs
examples/test-project/src/: lib.rs
examples/test-project/tests/: integration.rs
ns-path-utilities-sys/: Cargo.toml  README.md  build.rs
ns-path-utilities-sys/src/: lib.rs
project-templates/android/: local.properties  local.properties.hbs  settings.gradle  settings.gradle.hbs
project-templates/android/app/: build.gradle  build.gradle.hbs
project-templates/android/app/src/androidTest/java/com/example/rust/: ExampleInstrumentedTest.kt  ExampleInstrumentedTest.kt.hbs
project-templates/android/app/src/main/: AndroidManifest.xml  AndroidManifest.xml.hbs
project-templates/android/app/src/main/java/com/example/rust/: MainActivity.kt  MainActivity.kt.hbs
project-templates/android/app/src/main/res/values/: strings.xml  strings.xml.hbs  themes.xml
project-templates/android/app/src/main/res/values-night/: themes.xml
project-templates/android/app/src/test/java/com/example/rust/: ExampleUnitTest.kt  ExampleUnitTest.kt.hbs
project-templates/android/gradle/wrapper/: gradle-wrapper.properties
project-templates/ios/: project.yml.hbs
project-templates/ios/bindings/: binding.h
project-templates/ios/cargoTai/: ContentView.swift  Info.plist
project-templates/ios/cargoTaiTest/: cargoTaiTests.swift
tai-lib/: Cargo.toml
tai-lib/src/: command_ext.rs  lib.rs
tai-lib/src/android/: bundle.rs  compiler.rs  mod.rs  platform.rs
tai-lib/src/android/bundle/: bundler.rs  mod.rs
tai-lib/src/android/platform/: mod.rs
tai-lib/src/android/task/: build_android_test.rs  build_build_units.rs  build_buildunits.rs  build_built_units.rs  context.rs  create_android_project.rs  create_bundles.rs  find_android_sdk.rs  get_android_env.rs  list_devices.rs  mod.rs  run_on_devices.rs  task.rs
tai-lib/src/android/templates/: start_script.tmpl
tai-lib/src/android/tools/: adb.rs  gradlew.rs  mod.rs
tai-lib/src/bundle/: bundles.rs  mod.rs
tai-lib/src/command/: mod.rs
tai-lib/src/common/: command.rs  mod.rs  opts.rs  project.rs  utils.rs
tai-lib/src/common/bundle/: bundles.rs  mod.rs
tai-lib/src/common/command/: mod.rs
tai-lib/src/common/compiler/: mod.rs  util.rs
tai-lib/src/common/options/: mod.rs
tai-lib/src/common/opts/: mod.rs
tai-lib/src/common/project/: mod.rs
tai-lib/src/common/task/: context.rs  get_project_metadata.rs  mod.rs  set_bench_arg.rs
tai-lib/src/common/tools/: command_ext.rs  mod.rs  rsync.rs
tai-lib/src/compiler/: mod.rs  test.rs  util.rs
tai-lib/src/ios/: compiler.rs  mod.rs
tai-lib/src/ios/bundle/: bundler.rs  mod.rs  signing.rs
tai-lib/src/ios/compiler/: mod.rs  test.rs  util.rs
tai-lib/src/ios/platform/: mod.rs  physical.rs  simulator.rs
tai-lib/src/ios/task/: build_app.rs  build_build_units.rs  build_buildunits.rs  build_built_units.rs  build_xcode_app.rs  build_xcode_test.rs  context.rs  copy_test_products.rs  create_bundles.rs  create_signed_bundles.rs  create_xcode_project.rs  list_physical_devices.rs  list_simulators.rs  mod.rs  read_signing_settings.rs  run_on_physical_device.rs  run_on_simulators.rs  task.rs
tai-lib/src/ios/templates/: lldb.tmpl
tai-lib/src/ios/tools/: codesign.rs  ios_deploy.rs  libimobiledevice.rs  lldb.rs  mod.rs  rsync.rs  security.rs  xcodebuild.rs  xcodegen.rs  xcrun.rs  zip.rs
tai-lib/src/options/: mod.rs
tai-lib/src/project/: mod.rs
tai-lib/src/task/: bench.rs  mod.rs  test.rs
tai-lib/src/tools/: mod.rs
tai-resource/: Cargo.toml
tai-resource/src/: lib.rs
tai-test/: Cargo.toml
tai-test/src/: lib.rs
tai-util/: Cargo.toml
tai-util/src/: lib.rs
test-p/: Cargo.toml
test-p/benches/: criterion.rs
test-p/src/: lib.rs
test-project/: Cargo.toml
test-project/benches/: criterion.rs
test-project/src/: lib.rs
