[package]
name = "cargo-tai"
version = "0.0.1"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
license = "Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/xaynetwork/cargo_tai"
keywords = [
    "test", "mobile", "ios", "android", "cargo"
]
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
cfg-expr = "0.8.1"
structopt = "0.3.23"
tai-lib = { path = "../tai-lib", features = ["ios"] }
tracing = "0.1.32"
tracing-subscriber = "0.2.24"
