[package]
name = "tai-lib"
version = "0.0.1"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
license = "Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/xaynetwork/cargo_tai"
keywords = [
    "test", "mobile", "ios", "android", "cargo"
]
categories = ["development-tools::testing"]
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
cargo_metadata = "0.14.0"
cfg-expr = "0.8.1"
once_cell = "1.8.0"
regex = "1.5.4"
serde = "1.0.130"
serde_bytes = "0.11.5"
serde_json = "1.0.68"
tai-util = { path = "../tai-util" }
tracing = "0.1.29"

# ios feature
chrono = { version = "0.4.19", optional = true }
openssl = { version = "0.10.36", optional = true }
plist = { version = "1.2.1", optional = true }
simctl = { version = "0.1.1", optional = true }
tempfile = { version = "3.2.0", optional = true }

[features]
default = []
ios = ["tempfile", "openssl", "plist", "simctl", "chrono"]
