[package]
name = "tai-lib"
version = "0.0.1"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
license = "Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/xaynetwork/cargo_tai"
keywords = ["test", "mobile", "ios", "android", "cargo"]
categories = ["development-tools::testing"]
readme = "../README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
anymap = "1.0.0-beta.2"
base64 = "0.13.0"
cargo_metadata = "0.15.0"
cfg-expr = "0.8.1"
guppy = "0.14.2"
once_cell = "1.13.0"
regex = "1.6.0"
serde = "1.0.139"
serde_bytes = "0.11.6"
serde_json = "1.0.82"
tracing = "0.1.35"
walkdir = "2.3.2"

# ios feature
chrono = { version = "0.4.19", optional = true }
openssl = { version = "0.10.41", optional = true }
plist = { version = "1.3.1", optional = true }
simctl = { version = "0.1.1", optional = true }
tempfile = { version = "3.3.0", optional = true }
fs_extra = { version = "1.2.0", optional = true }

[features]
default = []
ios = ["tempfile", "openssl", "plist", "simctl", "chrono", "fs_extra"]
