[package]
name = "tai-lib"
version = "0.0.1"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
license = "Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/xaynetwork/cargo_tai"
keywords = ["test", "mobile", "ios", "android", "cargo"]
categories = ["development-tools::testing"]
readme = "../README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
anymap = "1.0.0-beta.2"
base64 = "0.20.0"
cargo_metadata = "0.15.1"
cfg-expr = "0.8.1"
handlebars = "4.3.6"
once_cell = "1.16.0"
regex = "1.7.1"
serde = "1.0.151"
serde_bytes = "0.11.8"
serde_json = "1.0.91"
tai-util = { path = "../tai-util" }
tracing = "0.1.37"
walkdir = "2.3.2"

# ios feature
chrono = { version = "0.4.23", optional = true }
openssl = { version = "0.10.45", optional = true }
plist = { version = "1.3.1", optional = true }
simctl = { version = "0.1.1", optional = true }
tempfile = { version = "3.3.0", optional = true }
fs_extra = { version = "1.2.0", optional = true }

[features]
default = []
ios = ["tempfile", "openssl", "plist", "simctl", "chrono", "fs_extra"]
