[package]
name = "tai-resource"
version = "0.0.1"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
license = "Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/xaynetwork/cargo_tai"
keywords = ["test", "mobile", "ios", "android", "cargo"]
categories = ["development-tools::cargo-plugins", "development-tools::testing", "development-tools::profiling"]
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
cargo_metadata = "0.15.0"
fasthash = "0.4.0"
proc-macro2 = "1.0.40"
quote = "1.0.20"
serde = "1.0.139"
serde_json = "1.0.82"
