[package]
name = "tai-util"
version = "0.0.1"
authors = ["Robert Steiner <robertt.debug@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/Robert-Steiner/cargo-tai"
keywords = [
    "test", "mobile", "ios", "android", "cargo"
]
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"
edition = "2018"

[target.'cfg(target_os="ios")'.dependencies]
# cacao = { git = "https://github.com/ryanmcgrath/cacao", rev = "420422187a6118a1ea04eaae79543fdba4068c1e", features = ["ios"] }
ns-path-utilities-sys = { git = "ssh://git@github.com/Robert-Steiner/ns-path-utilities-sys.git" }
