[package]
name = "test-project-nested"
version = "0.0.1"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
license = "Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/xaynetwork/cargo_tai"
keywords = ["test", "mobile", "ios", "android", "cargo"]
categories = ["development-tools::cargo-plugins", "development-tools::testing", "development-tools::profiling"]
readme = "../README.md"
edition = "2021"
publish = false

[dependencies]
tai-resource = { path = "../../tai-resource" }
test-project = { path = "../test-project" }
