[package]
name = "test-project"
version = "0.0.1"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
license = "Apache-2.0"
description = "Mobile-testing made easier"
repository = "https://github.com/xaynetwork/cargo_tai"
keywords = ["test", "mobile", "ios", "android", "cargo"]
categories = ["development-tools::cargo-plugins", "development-tools::testing", "development-tools::profiling"]
readme = "../README.md"
edition = "2021"
publish = false

[dependencies]
tai-util = { path = "../../tai-util" }

[lib]
bench = false

[dev-dependencies]
criterion = "0.3"
tai-util = { path = "../../tai-util" }

[[bench]]
name = "criterion"
harness = false
